# distill-lint

./: .gitignore  CITATION.cff  LICENSE  NOTICE  QUICKSTART.md  README.md  SECURITY.md  _smoke.py  config_guidance.md  model_revisions.py  pyproject.toml  qa.py  requirements.txt
ci/: github-actions.yml
evidence/: E1_RESULT.md  E2_RESULT.md  E3_RESULT.md  e4_scrub_efficacy.csv  e4_scrub_efficacy_RESULT.md  e5_operating_point.csv  e5_operating_point_RESULT.md  leak_fixture.py  measure_scrub.py
evidence/results/: e1_detector.csv  e2_classifier.json  e3_adversarial.csv
examples/: watchlist.example.txt
examples/real_models/: README.md  make_figures.py  model_zoo.yaml
examples/real_models/runs/: deepseek-r1-distill-qwen-1.5b__classify_frontier_ai_brands.json  deepseek-r1-distill-qwen-1.5b__classify_neutral_control.json  deepseek-r1-distill-qwen-1.5b__classify_news_sources.json  deepseek-r1-distill-qwen-1.5b__scan.json
examples/real_models/token_panels/: frontier_ai_brands.txt  neutral_control.txt  news_sources.txt
nulls/: INDEX.json  pythia-410m.json
tests/: test_qa.py
watchlists/: README.md  brands.txt  frontier_ai.txt  neutral_control.txt  news_sources.txt
